--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>football</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7c52814436.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header start -->
@@ -14,7 +15,7 @@
         <div class="banner">
             <div class="banner-description">
                 <h1>Let's watch, <br> Copa America <br> 2021</h1>
-                <p><a href="">Watch Live</a></p>
+                <p><a href="">Watch Live <i class="fas fa-arrow-right"></i></a></p>
             </div>
             <div class="banner-image">
                 <img src="images/banner.png" alt="">
@@ -134,6 +135,79 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="information">
+                <div class="player-information">
+                    <h1>Al highlights copa America 2021</h1>
+                    <p> Lionel Messi and Argentina Beat Brazil in Copa América Final. A star player's glittering career finally gets the one honor it was missing: a major </p>
+                    <p><a href="">Watch now <i class="fas fa-arrow-right"></i></a></p>
+                </div>
+                <div class="player-image">
+                    <img src="images/match.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="extra-section">
+                <div class="section1">
+                    <h2>Learn More</h2>
+                    <div class="more">
+                        <div class="events">
+                            <ul>
+                                <h3>EVENTS</h3>
+                                <li><a href="">National </a></li>
+                                <li><a href="">Conference</a></li>
+                                <li><a href="">Tour</a></li>
+                                <li><a href="">Bowl</a></li>
+                                <li><a href="">Flag </a></li>
+                                <li><a href="">Flag Tour</a></li>
+                            </ul>
+                        </div>
+                        <div class="program">
+                            <ul>
+                                <h3>PROGRAMS</h3>
+                                <li><a href="">Enrollment</a></li>
+                                <li><a href="">Football </a></li>
+                                <li><a href="">Throw & Go</a></li>
+                                <li><a href="">National Teams</a></li>
+                                <li><a href="">Heart a Giant</a></li>
+                                <li><a href="">Courses</a></li>
+                            </ul>
+                        </div>
+                        <div class="tools">
+                            <ul>
+                                <h3>RESOURCES & TOOLS</h3>
+                                <li><a href="">Blog</a></li>
+                                <li><a href="">Coach</a></li>
+                                <li><a href="">Commissionar</a></li>
+                                <li><a href="">Prents</a></li>
+                                <li><a href="">Parenter offer</a></li>
+                                <li><a href="">Find a league</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="section2">
+                    <h2>Sign Up</h2>
+                    <div class="form">
+                        <p><input type="text" placeholder="Enter your first name"></p>
+                        <p><input type="text" placeholder="Enter your last name"></p>
+                        <p><input type="email" placeholder="Enter your Email"></p>
+                        <p><input type="password" placeholder="Enter your password"></p>
+                        <button type="submit">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="football">
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div class="social-media">
+            <a href=""><i class="fab fa-facebook-f"></i></a> <a href=""><i class="fab fa-instagram"></i></a> <a href=""><i class="fab fa-linkedin-in"></i></a> <a href=""><i class="fab fa-twitter"></i></a>
+            <p>Copyright &copy; 2021 Football</p>
+        </div>
+    </footer>
 </body>
 </html>
