--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         <div class="banner">
             <div class="banner-description">
                 <h1>Let's watch, <br> Copa America <br> 2021</h1>
-                <p><a href="">Watch Live <i class="fas fa-arrow-right"></i></a></p>
+                <p><a target="blank" href="https://www.youtube.com/">Watch Live <i class="fas fa-arrow-right"></i></a></p>
             </div>
             <div class="banner-image">
                 <img src="images/banner.png" alt="">
             </div>
         </div>
     </header>
+    <!-- header end -->
     <main>
+        <!-- first section start -->
         <section>
             <div class="all-players">
                 <div class="player">
@@ -135,10 +137,12 @@
                 </div>
             </div>
         </section>
+        <!-- first section end -->
         <section>
+            <!-- second section start -->
             <div class="information">
                 <div class="player-information">
-                    <h1>Al highlights copa America 2021</h1>
+                    <h1>All highlights copa America 2021</h1>
                     <p> Lionel Messi and Argentina Beat Brazil in Copa América Final. A star player's glittering career finally gets the one honor it was missing: a major </p>
                     <p><a href="">Watch now <i class="fas fa-arrow-right"></i></a></p>
                 </div>
@@ -147,6 +151,8 @@
                 </div>
             </div>
         </section>
+        <!-- second section end -->
+        <!-- extra section start -->
         <section>
             <div class="extra-section">
                 <div class="section1">
@@ -155,34 +161,34 @@
                         <div class="events">
                             <ul>
                                 <h3>EVENTS</h3>
-                                <li><a href="">National </a></li>
-                                <li><a href="">Conference</a></li>
-                                <li><a href="">Tour</a></li>
-                                <li><a href="">Bowl</a></li>
-                                <li><a href="">Flag </a></li>
-                                <li><a href="">Flag Tour</a></li>
+                                <li><a href="#">National </a></li>
+                                <li><a href="#">Conference</a></li>
+                                <li><a href="#">Tour</a></li>
+                                <li><a href="#">Bowl</a></li>
+                                <li><a href="#">Flag </a></li>
+                                <li><a href="#">Flag Tour</a></li>
                             </ul>
                         </div>
                         <div class="program">
                             <ul>
                                 <h3>PROGRAMS</h3>
-                                <li><a href="">Enrollment</a></li>
-                                <li><a href="">Football </a></li>
-                                <li><a href="">Throw & Go</a></li>
-                                <li><a href="">National Teams</a></li>
-                                <li><a href="">Heart a Giant</a></li>
-                                <li><a href="">Courses</a></li>
+                                <li><a href="#">Enrollment</a></li>
+                                <li><a href="#">Football </a></li>
+                                <li><a href="#">Throw & Go</a></li>
+                                <li><a href="#">National Teams</a></li>
+                                <li><a href="#">Heart a Giant</a></li>
+                                <li><a href="#">Courses</a></li>
                             </ul>
                         </div>
                         <div class="tools">
                             <ul>
                                 <h3>RESOURCES & TOOLS</h3>
-                                <li><a href="">Blog</a></li>
-                                <li><a href="">Coach</a></li>
-                                <li><a href="">Commissionar</a></li>
-                                <li><a href="">Prents</a></li>
-                                <li><a href="">Parenter offer</a></li>
-                                <li><a href="">Find a league</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Coach</a></li>
+                                <li><a href="#">Commissionar</a></li>
+                                <li><a href="#">Prents</a></li>
+                                <li><a href="#">Parenter offer</a></li>
+                                <li><a href="#">Find a league</a></li>
                             </ul>
                         </div>
                     </div>
@@ -199,15 +205,18 @@
                 </div>
             </div>
         </section>
+        <!-- extra section end -->
     </main>
+    <!-- footer start -->
     <footer>
         <div class="football">
             <img src="images/Logo.png" alt="">
         </div>
         <div class="social-media">
-            <a href=""><i class="fab fa-facebook-f"></i></a> <a href=""><i class="fab fa-instagram"></i></a> <a href=""><i class="fab fa-linkedin-in"></i></a> <a href=""><i class="fab fa-twitter"></i></a>
+            <a target="blank" href="https://www.youtube.com/"><i class="fab fa-facebook-f"></i></a> <a target="blank" href="https://www.youtube.com/"><i class="fab fa-instagram"></i></a> <a target="blank" href="https://www.youtube.com/"><i class="fab fa-linkedin-in"></i></a> <a target="blank" href="https://www.youtube.com/"><i class="fab fa-twitter"></i></a>
             <p>Copyright &copy; 2021 Football</p>
         </div>
     </footer>
+    <!-- footer end -->
 </body>
 </html>
